<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/home_block_description"
        android:src="@drawable/home_block" >
    </ImageView>
    <!--
		<com.handmark.pulltorefresh.library.PullToRefreshScrollView
        xmlns:ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/pull_refresh_scrollview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        ptr:ptrAnimationStyle="flip"
        ptr:ptrMode="both" >
    -->

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_middle"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/next_class_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/grey_light"
                android:orientation="vertical" 
                android:onClick="toSchedule"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <View
                        android:layout_width="12dp"
                        android:layout_height="match_parent"
                        android:background="@color/blue" 
                        />

                    <LinearLayout
                        android:layout_width="72dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="12dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/text_next_class_start_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/grey_dark"
                            android:textSize="28sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text_next_class_end_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:textColor="@color/grey_dark"
                            android:textSize="28sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="12dp"
                        android:layout_marginTop="12dp"
                        android:background="@color/blue" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="12dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/text_next_class_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textColor="@color/grey_dark"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text_next_class_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textColor="@color/grey_dark"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text_next_class_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textColor="@color/grey"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="4dp"
                    android:background="@drawable/drop_shadow" >
                </View>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/itslearning_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/grey_light"
                android:orientation="vertical" 
                android:onClick="toITSL">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <View
                        android:layout_width="12dp"
                        android:layout_height="match_parent"
                        android:background="@color/green" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="4dp"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/text_itsl_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/fultitle"
                            android:textColor="@color/grey_dark"
                            android:textSize="22sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/green" />

                        <TextView
                            android:id="@+id/text_itsl_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/fuldate"
                            android:textColor="@color/grey"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/text_itsl_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/fultext"
                            android:textColor="@color/grey_dark"
                            android:textSize="18sp"
                            android:textStyle="normal" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="4dp"
                    android:background="@drawable/drop_shadow" >
                </View>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/grey_light"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <View
                        android:layout_width="12dp"
                        android:layout_height="match_parent"
                        android:background="@color/red_mah" />

                    <LinearLayout
                        android:id="@+id/news_feed_mah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="4dp"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/news_widget_heading"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:text="@string/news_widget_heading"
                            android:textColor="@color/grey_dark"
                            android:textSize="22sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginBottom="4dp"
                            android:background="@color/red_mah" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="4dp"
                    android:background="@drawable/drop_shadow" >
                </View>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!-- </com.handmark.pulltorefresh.library.PullToRefreshScrollView> -->

</LinearLayout>